2024-Spring-NCKU-CompilerHW2/build/y.output
Grammar

    0 $accept: Program $end

    1 @1: /* empty */

    2 Program: @1 GlobalStmtList
    3        | /* empty */

    4 GlobalStmtList: GlobalStmtList GlobalStmt
    5               | GlobalStmt

    6 GlobalStmt: DefineVariableStmt ';'
    7           | FunctionDefStmt

    8 DefineVariableStmt: VARIABLE_T DefineVariableList

    9 DefineVariableList: DefineVariableList ',' DefineVariable
   10                   | DefineVariable

   11 DefineVariable: IDENT
   12               | IDENT VAL_ASSIGN Expression
   13               | IDENT '[' Literal ']'

   14 @2: /* empty */

   15 DefineVariable: IDENT '[' Literal ']' @2 VAL_ASSIGN '{' ExpList '}'
   16               | IDENT '[' Literal ']' '[' Literal ']'

   17 @3: /* empty */

   18 @4: /* empty */

   19 FunctionDefStmt: VARIABLE_T IDENT '(' @3 FunctionParameterStmtList ')' @4 '{' StmtList '}'

   20 FunctionParameterStmtList: FunctionParameterStmtList ',' FunctionParameterStmt
   21                          | FunctionParameterStmt
   22                          | /* empty */

   23 FunctionParameterStmt: VARIABLE_T IDENT
   24                      | VARIABLE_T IDENT '[' ']'

   25 StmtList: StmtList Stmt
   26         | Stmt

   27 Stmt: ';'
   28     | COUT CoutParmListStmt ';'
   29     | RETURN Expression ';'
   30     | RETURN ';'
   31     | BREAK ';'
   32     | CONTINUE ';'
   33     | DefineVariableStmt ';'
   34     | AssignStmt ';'
   35     | FuncCallStmt ';'
   36     | IfStmt
   37     | ForStmt
   38     | WhileStmt

   39 CoutParmListStmt: CoutParmListStmt SHL Expression
   40                 | SHL Expression

   41 @5: /* empty */

   42 @6: /* empty */

   43 IfStmt: IF '(' Expression ')' @5 '{' StmtList '}' @6 ElseStmt

   44 @7: /* empty */

   45 IfStmt: IF '(' Expression ')' @7 Stmt

   46 @8: /* empty */

   47 ElseStmt: ELSE @8 '{' StmtList '}'
   48         | /* empty */

   49 @9: /* empty */

   50 ForStmt: FOR @9 '(' ForInitStmt ')' '{' StmtList '}'

   51 ForInitStmt: DefineVariableStmt ':' Expression
   52            | ForCondStmt ';' Expression ';' ForUpdateStmt

   53 ForCondStmt: DefineVariableStmt
   54            | AssignStmt
   55            | /* empty */

   56 ForUpdateStmt: AssignStmt
   57              | /* empty */

   58 @10: /* empty */

   59 @11: /* empty */

   60 WhileStmt: WHILE @10 '(' Expression ')' @11 '{' StmtList '}'

   61 AssignStmt: IdentExp VAL_ASSIGN Expression
   62           | IdentExp ADD_ASSIGN Expression
   63           | IdentExp SUB_ASSIGN Expression
   64           | IdentExp MUL_ASSIGN Expression
   65           | IdentExp DIV_ASSIGN Expression
   66           | IdentExp REM_ASSIGN Expression
   67           | IdentExp SHR_ASSIGN Expression
   68           | IdentExp SHL_ASSIGN Expression
   69           | IdentExp BAN_ASSIGN Expression
   70           | IdentExp BOR_ASSIGN Expression
   71           | IdentExp BXO_ASSIGN Expression
   72           | IdentExp INC_ASSIGN
   73           | IdentExp DEC_ASSIGN

   74 ExpList: ExpList ',' Expression
   75        | Expression
   76        | /* empty */

   77 Expression: ExpHierarchy

   78 ExpHierarchy: LORExp

   79 LORExp: LORExp LOR LANExp
   80       | LANExp

   81 LANExp: LANExp LAN BORExp
   82       | BORExp

   83 BORExp: BORExp BOR BXOExp
   84       | BXOExp

   85 BXOExp: BXOExp BXO BANExp
   86       | BANExp

   87 BANExp: BANExp BAN EQUExp
   88       | EQUExp

   89 EQUExp: EQUExp EQL CompareExp
   90       | EQUExp NEQ CompareExp
   91       | CompareExp

   92 CompareExp: CompareExp GTR ShiftExp
   93           | CompareExp LES ShiftExp
   94           | CompareExp GEQ ShiftExp
   95           | CompareExp LEQ ShiftExp
   96           | ShiftExp

   97 ShiftExp: ShiftExp SHR AddSubExp
   98         | AddSubExp

   99 AddSubExp: AddSubExp ADD MulExp
  100          | AddSubExp SUB MulExp
  101          | MulExp

  102 MulExp: MulExp MUL UnaryExp
  103       | MulExp DIV UnaryExp
  104       | MulExp REM UnaryExp
  105       | UnaryExp

  106 UnaryExp: NOT UnaryExp
  107         | BNT UnaryExp
  108         | SUB UnaryExp
  109         | '(' VARIABLE_T ')' UnaryExp
  110         | FuncCallStmt
  111         | Literal

  112 FuncCallStmt: IDENT '(' ExpList ')'

  113 Literal: STR_LIT
  114        | INT_LIT
  115        | FLOAT_LIT
  116        | BOOL_LIT
  117        | '(' Expression ')'
  118        | IdentExp

  119 IdentExp: IDENT
  120         | IDENT '[' Expression ']'
  121         | IDENT '[' Expression ']' '[' Expression ']'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 19 43 45 50 60 109 112 117
')' (41) 19 43 45 50 60 109 112 117
',' (44) 9 20 74
':' (58) 51
';' (59) 6 27 28 29 30 31 32 33 34 35 52
'[' (91) 13 15 16 24 120 121
']' (93) 13 15 16 24 120 121
'{' (123) 15 19 43 47 50 60
'}' (125) 15 19 43 47 50 60
error (256)
COUT (258) 28
SHR (259) 97
SHL (260) 39 40
BAN (261) 87
BOR (262) 83
BNT (263) 107
BXO (264) 85
ADD (265) 99
SUB (266) 100 108
MUL (267) 102
DIV (268) 103
REM (269) 104
NOT (270) 106
GTR (271) 92
LES (272) 93
GEQ (273) 94
LEQ (274) 95
EQL (275) 89
NEQ (276) 90
LAN (277) 81
LOR (278) 79
VAL_ASSIGN (279) 12 15 61
ADD_ASSIGN (280) 62
SUB_ASSIGN (281) 63
MUL_ASSIGN (282) 64
DIV_ASSIGN (283) 65
REM_ASSIGN (284) 66
BAN_ASSIGN (285) 69
BOR_ASSIGN (286) 70
BXO_ASSIGN (287) 71
SHR_ASSIGN (288) 67
SHL_ASSIGN (289) 68
INC_ASSIGN (290) 72
DEC_ASSIGN (291) 73
IF (292) 43 45
ELSE (293) 47
FOR (294) 50
WHILE (295) 60
RETURN (296) 29 30
BREAK (297) 31
CONTINUE (298) 32
VARIABLE_T (299) 8 19 23 24 109
IDENT (300) 11 12 13 15 16 19 23 24 112 119 120 121
INT_LIT (301) 114
FLOAT_LIT (302) 115
BOOL_LIT (303) 116
STR_LIT (304) 113


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
Program (60)
    on left: 2 3, on right: 0
@1 (61)
    on left: 1, on right: 2
GlobalStmtList (62)
    on left: 4 5, on right: 2 4
GlobalStmt (63)
    on left: 6 7, on right: 4 5
DefineVariableStmt (64)
    on left: 8, on right: 6 33 51 53
DefineVariableList (65)
    on left: 9 10, on right: 8 9
DefineVariable (66)
    on left: 11 12 13 15 16, on right: 9 10
@2 (67)
    on left: 14, on right: 15
FunctionDefStmt (68)
    on left: 19, on right: 7
@3 (69)
    on left: 17, on right: 19
@4 (70)
    on left: 18, on right: 19
FunctionParameterStmtList (71)
    on left: 20 21 22, on right: 19 20
FunctionParameterStmt (72)
    on left: 23 24, on right: 20 21
StmtList (73)
    on left: 25 26, on right: 19 25 43 47 50 60
Stmt (74)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38, on right: 25 26 45
CoutParmListStmt (75)
    on left: 39 40, on right: 28 39
IfStmt (76)
    on left: 43 45, on right: 36
@5 (77)
    on left: 41, on right: 43
@6 (78)
    on left: 42, on right: 43
@7 (79)
    on left: 44, on right: 45
ElseStmt (80)
    on left: 47 48, on right: 43
@8 (81)
    on left: 46, on right: 47
ForStmt (82)
    on left: 50, on right: 37
@9 (83)
    on left: 49, on right: 50
ForInitStmt (84)
    on left: 51 52, on right: 50
ForCondStmt (85)
    on left: 53 54 55, on right: 52
ForUpdateStmt (86)
    on left: 56 57, on right: 52
WhileStmt (87)
    on left: 60, on right: 38
@10 (88)
    on left: 58, on right: 60
@11 (89)
    on left: 59, on right: 60
AssignStmt (90)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72 73,
    on right: 34 54 56
ExpList (91)
    on left: 74 75 76, on right: 15 74 112
Expression (92)
    on left: 77, on right: 12 29 39 40 43 45 51 52 60 61 62 63 64 65
    66 67 68 69 70 71 74 75 117 120 121
ExpHierarchy (93)
    on left: 78, on right: 77
LORExp (94)
    on left: 79 80, on right: 78 79
LANExp (95)
    on left: 81 82, on right: 79 80 81
BORExp (96)
    on left: 83 84, on right: 81 82 83
BXOExp (97)
    on left: 85 86, on right: 83 84 85
BANExp (98)
    on left: 87 88, on right: 85 86 87
EQUExp (99)
    on left: 89 90 91, on right: 87 88 89 90
CompareExp (100)
    on left: 92 93 94 95 96, on right: 89 90 91 92 93 94 95
ShiftExp (101)
    on left: 97 98, on right: 92 93 94 95 96 97
AddSubExp (102)
    on left: 99 100 101, on right: 97 98 99 100
MulExp (103)
    on left: 102 103 104 105, on right: 99 100 101 102 103 104
UnaryExp (104)
    on left: 106 107 108 109 110 111, on right: 102 103 104 105 106
    107 108 109
FuncCallStmt (105)
    on left: 112, on right: 35 110
Literal (106)
    on left: 113 114 115 116 117 118, on right: 13 15 16 111
IdentExp (107)
    on left: 119 120 121, on right: 61 62 63 64 65 66 67 68 69 70 71
    72 73 118


state 0

    0 $accept: . Program $end

    $end      reduce using rule 3 (Program)
    $default  reduce using rule 1 (@1)

    Program  go to state 1
    @1       go to state 2


state 1

    0 $accept: Program . $end

    $end  shift, and go to state 3


state 2

    2 Program: @1 . GlobalStmtList

    VARIABLE_T  shift, and go to state 4

    GlobalStmtList      go to state 5
    GlobalStmt          go to state 6
    DefineVariableStmt  go to state 7
    FunctionDefStmt     go to state 8


state 3

    0 $accept: Program $end .

    $default  accept


state 4

    8 DefineVariableStmt: VARIABLE_T . DefineVariableList
   19 FunctionDefStmt: VARIABLE_T . IDENT '(' @3 FunctionParameterStmtList ')' @4 '{' StmtList '}'

    IDENT  shift, and go to state 9

    DefineVariableList  go to state 10
    DefineVariable      go to state 11


state 5

    2 Program: @1 GlobalStmtList .
    4 GlobalStmtList: GlobalStmtList . GlobalStmt

    VARIABLE_T  shift, and go to state 4

    $default  reduce using rule 2 (Program)

    GlobalStmt          go to state 12
    DefineVariableStmt  go to state 7
    FunctionDefStmt     go to state 8


state 6

    5 GlobalStmtList: GlobalStmt .

    $default  reduce using rule 5 (GlobalStmtList)


state 7

    6 GlobalStmt: DefineVariableStmt . ';'

    ';'  shift, and go to state 13


state 8

    7 GlobalStmt: FunctionDefStmt .

    $default  reduce using rule 7 (GlobalStmt)


state 9

   11 DefineVariable: IDENT .
   12               | IDENT . VAL_ASSIGN Expression
   13               | IDENT . '[' Literal ']'
   15               | IDENT . '[' Literal ']' @2 VAL_ASSIGN '{' ExpList '}'
   16               | IDENT . '[' Literal ']' '[' Literal ']'
   19 FunctionDefStmt: VARIABLE_T IDENT . '(' @3 FunctionParameterStmtList ')' @4 '{' StmtList '}'

    VAL_ASSIGN  shift, and go to state 14
    '['         shift, and go to state 15
    '('         shift, and go to state 16

    $default  reduce using rule 11 (DefineVariable)


state 10

    8 DefineVariableStmt: VARIABLE_T DefineVariableList .
    9 DefineVariableList: DefineVariableList . ',' DefineVariable

    ','  shift, and go to state 17

    $default  reduce using rule 8 (DefineVariableStmt)


state 11

   10 DefineVariableList: DefineVariable .

    $default  reduce using rule 10 (DefineVariableList)


state 12

    4 GlobalStmtList: GlobalStmtList GlobalStmt .

    $default  reduce using rule 4 (GlobalStmtList)


state 13

    6 GlobalStmt: DefineVariableStmt ';' .

    $default  reduce using rule 6 (GlobalStmt)


state 14

   12 DefineVariable: IDENT VAL_ASSIGN . Expression

    BNT        shift, and go to state 18
    SUB        shift, and go to state 19
    NOT        shift, and go to state 20
    IDENT      shift, and go to state 21
    INT_LIT    shift, and go to state 22
    FLOAT_LIT  shift, and go to state 23
    BOOL_LIT   shift, and go to state 24
    STR_LIT    shift, and go to state 25
    '('        shift, and go to state 26

    Expression    go to state 27
    ExpHierarchy  go to state 28
    LORExp        go to state 29
    LANExp        go to state 30
    BORExp        go to state 31
    BXOExp        go to state 32
    BANExp        go to state 33
    EQUExp        go to state 34
    CompareExp    go to state 35
    ShiftExp      go to state 36
    AddSubExp     go to state 37
    MulExp        go to state 38
    UnaryExp      go to state 39
    FuncCallStmt  go to state 40
    Literal       go to state 41
    IdentExp      go to state 42


state 15

   13 DefineVariable: IDENT '[' . Literal ']'
   15               | IDENT '[' . Literal ']' @2 VAL_ASSIGN '{' ExpList '}'
   16               | IDENT '[' . Literal ']' '[' Literal ']'

    IDENT      shift, and go to state 43
    INT_LIT    shift, and go to state 22
    FLOAT_LIT  shift, and go to state 23
    BOOL_LIT   shift, and go to state 24
    STR_LIT    shift, and go to state 25
    '('        shift, and go to state 44

    Literal   go to state 45
    IdentExp  go to state 42


state 16

   19 FunctionDefStmt: VARIABLE_T IDENT '(' . @3 FunctionParameterStmtList ')' @4 '{' StmtList '}'

    $default  reduce using rule 17 (@3)

    @3  go to state 46


state 17

    9 DefineVariableList: DefineVariableList ',' . DefineVariable

    IDENT  shift, and go to state 47

    DefineVariable  go to state 48


state 18

  107 UnaryExp: BNT . UnaryExp

    BNT        shift, and go to state 18
    SUB        shift, and go to state 19
    NOT        shift, and go to state 20
    IDENT      shift, and go to state 21
    INT_LIT    shift, and go to state 22
    FLOAT_LIT  shift, and go to state 23
    BOOL_LIT   shift, and go to state 24
    STR_LIT    shift, and go to state 25
    '('        shift, and go to state 26

    UnaryExp      go to state 49
    FuncCallStmt  go to state 40
    Literal       go to state 41
    IdentExp      go to state 42


state 19

  108 UnaryExp: SUB . UnaryExp

    BNT        shift, and go to state 18
    SUB        shift, and go to state 19
    NOT        shift, and go to state 20
    IDENT      shift, and go to state 21
    INT_LIT    shift, and go to state 22
    FLOAT_LIT  shift, and go to state 23
    BOOL_LIT   shift, and go to state 24
    STR_LIT    shift, and go to state 25
    '('        shift, and go to state 26

    UnaryExp      go to state 50
    FuncCallStmt  go to state 40
    Literal       go to state 41
    IdentExp      go to state 42


state 20

  106 UnaryExp: NOT . UnaryExp

    BNT        shift, and go to state 18
    SUB        shift, and go to state 19
    NOT        shift, and go to state 20
    IDENT      shift, and go to state 21
    INT_LIT    shift, and go to state 22
    FLOAT_LIT  shift, and go to state 23
    BOOL_LIT   shift, and go to state 24
    STR_LIT    shift, and go to state 25
    '('        shift, and go to state 26

    UnaryExp      go to state 51
    FuncCallStmt  go to state 40
    Literal       go to state 41
    IdentExp      go to state 42


state 21

  112 FuncCallStmt: IDENT . '(' ExpList ')'
  119 IdentExp: IDENT .
  120         | IDENT . '[' Expression ']'
  121         | IDENT . '[' Expression ']' '[' Expression ']'

    '['  shift, and go to state 52
    '('  shift, and go to state 53

    $default  reduce using rule 119 (IdentExp)


state 22

  114 Literal: INT_LIT .

    $default  reduce using rule 114 (Literal)


state 23

  115 Literal: FLOAT_LIT .

    $default  reduce using rule 115 (Literal)


state 24

  116 Literal: BOOL_LIT .

    $default  reduce using rule 116 (Literal)


state 25

  113 Literal: STR_LIT .

    $default  reduce using rule 113 (Literal)


state 26

  109 UnaryExp: '(' . VARIABLE_T ')' UnaryExp
  117 Literal: '(' . Expression ')'

    BNT         shift, and go to state 18
    SUB         shift, and go to state 19
    NOT         shift, and go to state 20
    VARIABLE_T  shift, and go to state 54
    IDENT       shift, and go to state 21
    INT_LIT     shift, and go to state 22
    FLOAT_LIT   shift, and go to state 23
    BOOL_LIT    shift, and go to state 24
    STR_LIT     shift, and go to state 25
    '('         shift, and go to state 26

    Expression    go to state 55
    ExpHierarchy  go to state 28
    LORExp        go to state 29
    LANExp        go to state 30
    BORExp        go to state 31
    BXOExp        go to state 32
    BANExp        go to state 33
    EQUExp        go to state 34
    CompareExp    go to state 35
    ShiftExp      go to state 36
    AddSubExp     go to state 37
    MulExp        go to state 38
    UnaryExp      go to state 39
    FuncCallStmt  go to state 40
    Literal       go to state 41
    IdentExp      go to state 42


state 27

   12 DefineVariable: IDENT VAL_ASSIGN Expression .

    $default  reduce using rule 12 (DefineVariable)


state 28

   77 Expression: ExpHierarchy .

    $default  reduce using rule 77 (Expression)


state 29

   78 ExpHierarchy: LORExp .
   79 LORExp: LORExp . LOR LANExp

    LOR  shift, and go to state 56

    $default  reduce using rule 78 (ExpHierarchy)


state 30

   80 LORExp: LANExp .
   81 LANExp: LANExp . LAN BORExp

    LAN  shift, and go to state 57

    $default  reduce using rule 80 (LORExp)


state 31

   82 LANExp: BORExp .
   83 BORExp: BORExp . BOR BXOExp

    BOR  shift, and go to state 58

    $default  reduce using rule 82 (LANExp)


state 32

   84 BORExp: BXOExp .
   85 BXOExp: BXOExp . BXO BANExp

    BXO  shift, and go to state 59

    $default  reduce using rule 84 (BORExp)


state 33

   86 BXOExp: BANExp .
   87 BANExp: BANExp . BAN EQUExp

    BAN  shift, and go to state 60

    $default  reduce using rule 86 (BXOExp)


state 34

   88 BANExp: EQUExp .
   89 EQUExp: EQUExp . EQL CompareExp
   90       | EQUExp . NEQ CompareExp

    EQL  shift, and go to state 61
    NEQ  shift, and go to state 62

    $default  reduce using rule 88 (BANExp)


state 35

   91 EQUExp: CompareExp .
   92 CompareExp: CompareExp . GTR ShiftExp
   93           | CompareExp . LES ShiftExp
   94           | CompareExp . GEQ ShiftExp
   95           | CompareExp . LEQ ShiftExp

    GTR  shift, and go to state 63
    LES  shift, and go to state 64
    GEQ  shift, and go to state 65
    LEQ  shift, and go to state 66

    $default  reduce using rule 91 (EQUExp)


state 36

   96 CompareExp: ShiftExp .
   97 ShiftExp: ShiftExp . SHR AddSubExp

    SHR  shift, and go to state 67

    $default  reduce using rule 96 (CompareExp)


state 37

   98 ShiftExp: AddSubExp .
   99 AddSubExp: AddSubExp . ADD MulExp
  100          | AddSubExp . SUB MulExp

    ADD  shift, and go to state 68
    SUB  shift, and go to state 69

    $default  reduce using rule 98 (ShiftExp)


state 38

  101 AddSubExp: MulExp .
  102 MulExp: MulExp . MUL UnaryExp
  103       | MulExp . DIV UnaryExp
  104       | MulExp . REM UnaryExp

    MUL  shift, and go to state 70
    DIV  shift, and go to state 71
    REM  shift, and go to state 72

    $default  reduce using rule 101 (AddSubExp)


state 39

  105 MulExp: UnaryExp .

    $default  reduce using rule 105 (MulExp)


state 40

  110 UnaryExp: FuncCallStmt .

    $default  reduce using rule 110 (UnaryExp)


state 41

  111 UnaryExp: Literal .

    $default  reduce using rule 111 (UnaryExp)


state 42

  118 Literal: IdentExp .

    $default  reduce using rule 118 (Literal)


state 43

  119 IdentExp: IDENT .
  120         | IDENT . '[' Expression ']'
  121         | IDENT . '[' Expression ']' '[' Expression ']'

    '['  shift, and go to state 52

    $default  reduce using rule 119 (IdentExp)


state 44

  117 Literal: '(' . Expression ')'

    BNT        shift, and go to state 18
    SUB        shift, and go to state 19
    NOT        shift, and go to state 20
    IDENT      shift, and go to state 21
    INT_LIT    shift, and go to state 22
    FLOAT_LIT  shift, and go to state 23
    BOOL_LIT   shift, and go to state 24
    STR_LIT    shift, and go to state 25
    '('        shift, and go to state 26

    Expression    go to state 55
    ExpHierarchy  go to state 28
    LORExp        go to state 29
    LANExp        go to state 30
    BORExp        go to state 31
    BXOExp        go to state 32
    BANExp        go to state 33
    EQUExp        go to state 34
    CompareExp    go to state 35
    ShiftExp      go to state 36
    AddSubExp     go to state 37
    MulExp        go to state 38
    UnaryExp      go to state 39
    FuncCallStmt  go to state 40
    Literal       go to state 41
    IdentExp      go to state 42


state 45

   13 DefineVariable: IDENT '[' Literal . ']'
   15               | IDENT '[' Literal . ']' @2 VAL_ASSIGN '{' ExpList '}'
   16               | IDENT '[' Literal . ']' '[' Literal ']'

    ']'  shift, and go to state 73


state 46

   19 FunctionDefStmt: VARIABLE_T IDENT '(' @3 . FunctionParameterStmtList ')' @4 '{' StmtList '}'

    VARIABLE_T  shift, and go to state 74

    $default  reduce using rule 22 (FunctionParameterStmtList)

    FunctionParameterStmtList  go to state 75
    FunctionParameterStmt      go to state 76


state 47

   11 DefineVariable: IDENT .
   12               | IDENT . VAL_ASSIGN Expression
   13               | IDENT . '[' Literal ']'
   15               | IDENT . '[' Literal ']' @2 VAL_ASSIGN '{' ExpList '}'
   16               | IDENT . '[' Literal ']' '[' Literal ']'
